# seqeyes

./: .gitignore  CMakeLists.txt  KNOWN_ISSUES.md  LICENSE  README.md  build.cmd  build.sh  pyproject.toml
.github/workflows/: python-publish.yml
cmake/: GenVersion.cmake
doc/: PROJECT_OVERVIEW.md
matlab/: gen_seq_file.m  plot_ktraj.m  seqeyes.m
python/: CMakeLists.txt
python/seqeyes/: __init__.py  _version.py  sequence.py  viewer.py
python/src/: _seqeyes_core.cpp
python/tests/: conftest.py  test_sequence.py  test_version.py  test_viewer.py
src/: AutomationRunner.cpp  AutomationRunner.h  ExtensionLegendDialog.cpp  ExtensionLegendDialog.h  ExtensionPlotter.cpp  ExtensionPlotter.h  ExtensionStyleMap.h  InteractionHandler.cpp  InteractionHandler.h  KSpaceTrajectory.cpp  KSpaceTrajectory.h  LogManager.cpp  LogManager.h  LogTableDialog.cpp  LogTableDialog.h  NumericLineEdit.h  PulseqLabelAnalyzer.h  PulseqLoader.cpp  PulseqLoader.h  SeriesBuilder.cpp  SeriesBuilder.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  TRManager.cpp  TRManager.h  TrajectoryColormap.cpp  TrajectoryColormap.h  WaveformDrawer.cpp  WaveformDrawer.h  ZoomManager.cpp  ZoomManager.h  compat_bind.hpp  doublerangeslider.cpp  doublerangeslider.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+2 more)
test/: PerfZoomTest.cpp  TimeSliderSyncTest.cpp  run_all.py  test_load_all.py  test_perf_all.py  test_perf_zoom.py  test_zoom_pan.py
test/seq_files/: epi.seq  spi.seq  spi_sub.seq  writeCineGradientEcho.seq  writeEpiDiffusionRS.seq  writeEpiRS_label.seq  writeEpiRS_label_softdelay.seq  writeEpiSpinEcho.seq  writeEpiSpinEchoRS.seq  writeFastRadialGradientEcho.seq  writeFastRadialGradientEcho_rotExt.seq  writeGRE_live_demo_step0.seq  writeGradientEcho_grappa.seq  writeGradientEcho_label.seq  writeHASTE.seq  writeRadialGradientEcho.seq  writeRadialGradientEcho_rotExt.seq  writeSemiLaser.seq  writeTSE.seq  writeTrufi.seq  writeUTE.seq  writeUTE_rs.seq  write_QA_Sag_Localizer.seq
