[build-system]
build-backend = "scikit_build_core.build"
requires = [
  "scikit-build-core>=0.9",
  "setuptools_scm[toml]",
]

[project]
name = "seqeyes"
dynamic = ["version"]
description = "Python wrapper for the SeqEyes Pulseq sequence viewer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools_scm]
write_to = "python/seqeyes/_version.py"

[tool.scikit-build]
cmake.source-dir = "."
cmake.args = ["-DSEQEYES_BUILD_TESTS=OFF"]
wheel.packages = ["python/seqeyes"]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
